If it compiles it is good code